# Autonomous-Financial-Operations-Risk-Intelligence-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  graph.py  state.py
app/api/: dependencies.py  errors.py  router.py
app/cache/: __init__.py  redis.py
app/core/: __init__.py  config.py  health.py  lifespan.py  logging.py  middleware.py
app/db/: session.py
app/integrations/: __init__.py
app/models/: __init__.py  investigations.py  memory.py
app/schemas/: common.py  (+5 more)
docs/: ai_governance_layer.md  ai_reliability_architecture.md  architecture.md  compliance_agent.md  compliance_reasoning_engine.md  critic_agent.md  evidence_validation_system.md  executive_reporting_agent.md  financial_retrieval_agent.md  fraud_detection_agent.md  hallucination_detection_framework.md  human_approval_checkpoint_architecture.md  investigation_audit_trail_system.md  langgraph_investigation_workflow.md  parallel_execution_architecture.md  risk_scoring_agent.md  transaction_analysis_agent.md  workflow_memory_architecture.md  workflow_persistence_architecture.md  workflow_testing_architecture.md  workflow_visualization_metadata.md
examples/: logging_usage.py  redis_usage.py  run_compliance_agent.py  run_critic_agent.py  run_financial_retrieval_agent.py  run_fraud_detection_agent.py  run_investigation_workflow.py  run_parallel_investigation_workflow.py  run_reporting_agent.py  run_risk_scoring_agent.py  run_transaction_analysis_agent.py
tests/: conftest.py
(+68 files in other folders)
